# DNAbyte

./: .gitignore  .gitmodules  404.html  LICENSE  MANIFEST.in  README.md  benchmark_assembly_standalone.py  benchmark_parallel.py  conftest.py  dataofsims.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  results.txt  setup.cfg  sitemap.xml  subsequences_filtered.tsv  test_fasta_import.py  test_memory_analysis.py  test_new_binarycode.py  test_new_insilicodna.py  test_new_nucleobasecode.py  test_new_nucleobasecode_v2.py
.github/old_workflows/: testold.yml
.github/workflows/: test.yml
concepts/: index.html
dnabyte/: ErrorCorrectionOuter_NitwiseFountainCode.py  ErroredWithoutDecoding.py  __init__.py  assembly.py  auxiliary.py  binarize.py  binarytooligos.py  data.py  decode_linear_binom.py  decode_linear_chain.py  decode_maxdensity.py  decode_nohomopolyoddeven.py  decode_poly_binom.py  decode_poly_chain.py  encode.py  encode_linear_binom.py  encode_linear_chain.py  encode_maxdensity.py  encode_nohomopolyoddeven.py  encode_poly_binom.py  encode_poly_chain.py  instances.py  json_objects.py  library.py  load_plugins.py  logging_config.py  ltcodefixedsize.py  misc_err.py  misc_errors.py  oligo.py  oligopool.py  params.py  process.py  process_linear_binom.py  process_linear_chain.py  process_maxdensity.py  process_nohomopolyoddeven.py  process_poly_binom.py  process_poly_chain.py  processing.py  (+7 more)
dnabyte/ErrorChannels/: seq_table.json  sequencing_error.py  sequencing_simulation.py  simulator_api.py  synthesis_simulation.py
dnabyte/FountainCode/: testforfountainnit.py
dnabyte/ReedSolomon/: Decode_ReedSolomon  ErrorCorrection_ReedSolomon  Errorsymsep.py  ff.py  polynomial.py  rs.py  rsKaya.py  scratch.py
dnabyte/binarization/: binarize_compressed.py  binarize_default.py  binarize_text.py
dnabyte/data_classes/: README.md  __init__.py  (+9 more)
docs/: index.md  pipeline-architecture.md  reference.md  simulation.md  usage.md
error_channels/: query_table.py  query_table_seq.py  syn_table.json
reference/: index.html
search/: search_index.json
simulation/: RandomParams.py  auxiliary.py  dataofsims2.txt  index.html  lt_code_plot.py  sim_duration.py  sim_duration_ec.py  sim_storage_length.py  sim_successrate.py  simulation.py  simulation_paralel.py
simulations/: RandomParams.py  auxiliary.py  dataofsimlappy.txt  sim_bugfix.py  sim_duration.py  sim_duration_ec.py  sim_implicit_error_correction.py  sim_inherent_lin_poly.py  sim_inherenterr_lin_lin.py  sim_inherenterr_linear_binom.py  sim_inherenterr_linear_chain.py  sim_inherenterr_poly_lin.py  sim_inherenterr_poly_poly.py  sim_reedsolomon_percent.py  sim_storage_length.py  sim_storage_length_results.py  sim_successrate.py  simulation.py  simulation_paralel.py  simulation_parameters.py
tests/: README.md  __init__.py  test_end2end_polybinom.py  test_end2end_polychain.py  test_failure_scenario_B.py  test_multiple_alignment.py  testbase_end2end_newdata.py
tmp/: index.html
usage/: index.html
(+196 files in other folders)
