[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnabyte"
version = "0.9.0"
description = "A toolkit for encoding and decoding data for DNA-based data storage"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Fabian Schroeder", email = "fabian.schroeder@ekorefugium.com" }
]
dependencies = [
  "scipy",
  "numpy",
  "biopython",
  "reedsolo",
  "matplotlib",
  "pandas",
  "pyxdameraulevenshtein",
  "galois",
  "networkx",
  "psycopg2-binary",
  "regex"
]

[project.optional-dependencies]
dev = ["pytest", "sphinx", "black"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["dnabyte*"] } }

