[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnabyte"
version = "0.9.0"
description = "A toolkit for encoding and decoding data for DNA-based data storage"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Fabian Schroeder", email = "fabian.schroeder@ekorefugium.com" }
]
dependencies = [
  "scipy",
  "numpy",
  "biopython",
  "reedsolo",
  "matplotlib",
  "pandas",
  "pyxdameraulevenshtein",
  "galois",
  "networkx",
  "psycopg2-binary",
  "regex"
]

[project.optional-dependencies]
dev = ["coverage", "sphinx", "black", "ruff"]
test = ["coverage"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["dnabyte*"] } }

# Coverage configuration for unittest
[tool.coverage.run]
source = ["dnabyte"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["dnabyte*"] } }
include-package-data = true

[tool.setuptools.package-data]
"dnabyte.synthesis.mesa" = ["syn_table.json"]
"dnabyte.sequencing.mesa" = ["seq_table.json"]
