[metadata]
name = dnabyte
version = 0.9.0
author = Fabian Schroeder & Kaya Wernhart
author_email = fabian.schroeder@ekorefugium.com
description = A toolkit for encoding and decoding data for DNA-based data storage
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/Eko-Refugium/DNAbyte
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    scipy
    numpy
    biopython
    reedsolo
    matplotlib
    pandas

[options.package_data]
* = *.txt, *.md